--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 				<div class="modal-footer" id="modal-footer">
 					<button onclick="themNhanVien()" id="btnThemNV" type="button" class="btn btn-success">Thêm người
 						dùng</button>
-					<button id="btnCapNhat" type="button" class="btn btn-success">Cập nhật</button>
+					<button onclick="capNhat()" id="btnCapNhat" type="button" class="btn btn-success">Cập nhật</button>
 					<button id="btnDong" type="button" class="btn btn-danger" data-dismiss="modal">Đóng</button>
 				</div>
 
