--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 				<!-- Modal body -->
 				<div class="modal-body">
 
-					<form role="form">
+					<form role="form" id="formNhanVien">
 
 						<div class="form-group">
 							<div class="input-group">
@@ -286,6 +286,7 @@
 					<button onclick="themNhanVien()" id="btnThemNV" type="button" class="btn btn-success">Thêm người
 						dùng</button>
 					<button onclick="capNhat()" id="btnCapNhat" type="button" class="btn btn-success">Cập nhật</button>
+					<button onclick="resetForm()" id="btnReset" type="button" class="btn btn-primary" >Reset</button>
 					<button id="btnDong" type="button" class="btn btn-danger" data-dismiss="modal">Đóng</button>
 				</div>
 
@@ -322,6 +323,7 @@
 	</script>
 	<script src="./js/DanhSachNV.js"></script>
 	<script src="./js/NhanVien.js"></script>
+	<script src="./js/Validation.js"></script>
 	<script src="./js/main.js"></script>
 </body>
 
