--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 									<input type="text" class="form-control" placeholder="Loại nhân viên"
 										id="searchName">
 									<div class="input-group-prepend">
-										<span class="input-group-text" id="btnTimNV"><i class="fa fa-search"></i></span>
+										<button class="input-group-text" id="btnTimNV" onclick="timKiem()"><i class="fa fa-search"></i></button>
 									</div>
 								</div>
 							</div>
